Fix for firefox issue with alignment of prepend/append

--- a/themes/grav/scss/template/_forms.scss
+++ b/themes/grav/scss/template/_forms.scss
@@ -40,6 +40,7 @@ form {
 
     .form-input-addon-wrapper {
         display: table-row;
+
         .form-input-addon {
             display: table-cell;
             min-width: 43px;
@@ -48,6 +49,7 @@ form {
         }
         input {
             height: 43px;
+            display: table-cell;
         }
         .form-input-prepend {
             border-radius: 4px 0 0 4px;
